--- a/src/pages/management-app/poll/closedPoll/closedPoll.html
+++ b/src/pages/management-app/poll/closedPoll/closedPoll.html
@@ -3,5 +3,16 @@
 </ion-header>
 
 <ion-content class="csGrayBackground">
-    <p>closed polls</p>
+    
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
+
+
+    <poll-list [pollList]="pollList"></poll-list>
+
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+
 </ion-content>
