--- a/src/pages/management-app/poll/list/list.html
+++ b/src/pages/management-app/poll/list/list.html
@@ -1,6 +1,8 @@
 <ion-list>
     <a *ngFor="let poll of pollList" ion-item (click)="openViewPoll()" [style.border-left-color]="poll.mainAudienceColor">
-        <h2><b>{{poll.question}}</b></h2>
+        <h2>
+            <b>{{poll.question}}</b>
+        </h2>
         <ion-row>
             <ion-col col-4 class="no-padding-l csGray5353">
                 {{poll.optionTypeName}}
@@ -10,14 +12,18 @@
             </ion-col>
         </ion-row>
         <ion-row>
-                <ion-col col-6 class="no-padding-l csGray5353">
-                    Expires: {{poll.expiredAt |  amTimeAgo}}
-                </ion-col>
-                <ion-col col-6 class="no-padding-l" [style.color]="poll.mainAudienceColor">
-                        <ion-icon name="at"></ion-icon><span>{{poll.mainAudienceName}}</span>
-                    </ion-col>
-            </ion-row>   
+            <ion-col col-6 class="no-padding-l csGray5353">
+                Expires: {{poll.expiredAt | amTimeAgo}}
+            </ion-col>
+            <ion-col col-6 class="no-padding-l" [style.color]="poll.mainAudienceColor">
+                <ion-icon name="at"></ion-icon>
+                <span>{{poll.mainAudienceName}}</span>
+            </ion-col>
+        </ion-row>
     </a>
 </ion-list>
 
-
+<ion-list class="no-comment" *ngIf="pollList">
+    <ion-icon name="list-box"></ion-icon>
+    <br>NO RECORD FOUND
+</ion-list>
