--- a/src/pages/management-app/poll/list/list.html
+++ b/src/pages/management-app/poll/list/list.html
@@ -23,7 +23,7 @@
     </a>
 </ion-list>
 
-<ion-list class="no-comment" *ngIf="pollList">
+<ion-list class="no-comment" *ngIf="pollList?.length==0">
     <ion-icon name="list-box"></ion-icon>
     <br>NO RECORD FOUND
 </ion-list>
