search added in closed and current poll(diff for both, can be done common )

--- a/src/pages/management-app/poll/closedPoll/closedPoll.html
+++ b/src/pages/management-app/poll/closedPoll/closedPoll.html
@@ -1,5 +1,7 @@
 <ion-header>
     <nl-navbar [title]="title"></nl-navbar>
+    <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
+    
 </ion-header>
 
 <ion-content class="csGrayBackground">
@@ -8,7 +10,8 @@
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
 
-
+    <ion-spinner name="dots" *ngIf="searchInProcess"> </ion-spinner>
+    
     <poll-list [pollList]="pollList"></poll-list>
 
     <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
