--- a/src/pages/management-app/poll/currentPoll/currentPoll.html
+++ b/src/pages/management-app/poll/currentPoll/currentPoll.html
@@ -1,5 +1,7 @@
 <ion-header>
     <nl-navbar [title]="title"></nl-navbar>
+    <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" [debounce]="debounceDuration" (ionClear)="onSearchClear($event)"></ion-searchbar>
+    
 </ion-header>
 
 <ion-content class="csGrayBackground">
@@ -7,6 +9,8 @@
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
 
+    <ion-spinner name="dots" *ngIf="searchInProcess"> </ion-spinner>
+    
     <ion-fab right bottom>
         <button ion-fab color="danger" (click)="openNewPollModal()">
             <ion-icon name="add"></ion-icon>
