--- a/src/pages/student-app/appreciation/by-me/by-me.html
+++ b/src/pages/student-app/appreciation/by-me/by-me.html
@@ -10,5 +10,5 @@
         <button ion-fab color="danger" (click)="openNewAppreciationModal()"><ion-icon name="add"></ion-icon></button>
     </ion-fab>
 
-<p>by me appre</p>
+<p>by me appre Student</p>
 </ion-content>
