--- a/src/pages/student-app/appreciation/for-me/for-me.html
+++ b/src/pages/student-app/appreciation/for-me/for-me.html
@@ -6,9 +6,6 @@
     <!-- <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher> -->
-    <ion-fab right bottom>
-        <button ion-fab color="danger" (click)="openNewAppreciationModal()"><ion-icon name="add"></ion-icon></button>
-    </ion-fab>
 
-<p>by me appre</p>
+<p>for me appre STUDENT</p>
 </ion-content>
