--- a/src/pages/management-app/appreciation/by-me/by-me.html
+++ b/src/pages/management-app/appreciation/by-me/by-me.html
@@ -3,12 +3,19 @@
 </ion-header>
 
 <ion-content class="csGrayBackground">
-    <!-- <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher (ionRefresh)="doRefresh($event)">
         <ion-refresher-content></ion-refresher-content>
-    </ion-refresher> -->
-    <ion-fab right bottom>
-        <button ion-fab color="danger" (click)="openNewAppreciationModal()"><ion-icon name="add"></ion-icon></button>
-    </ion-fab>
+    </ion-refresher>
 
-<p>by me appre</p>
+    <ion-fab right bottom>
+        <button ion-fab color="danger" (click)="openNewAppreciationModal()">
+            <ion-icon name="add"></ion-icon>
+        </button>
+    </ion-fab>
+    <appreciation-list [appreciationList]="appreciationList"></appreciation-list>
+    
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+
 </ion-content>
