--- a/src/pages/management-app/poll/closedPoll/closedPoll.html
+++ b/src/pages/management-app/poll/closedPoll/closedPoll.html
@@ -12,7 +12,7 @@
 
     <ion-spinner name="dots" *ngIf="searchInProcess"> </ion-spinner>
     
-    <poll-list [pollList]="pollList"></poll-list>
+    <poll-list [pollList]="pollList" [arePollExpired]="arePollExpired"></poll-list>
 
     <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
