--- a/src/pages/management-app/poll/currentPoll/currentPoll.html
+++ b/src/pages/management-app/poll/currentPoll/currentPoll.html
@@ -17,7 +17,7 @@
         </button>
     </ion-fab>
 
-    <poll-list [pollList]="pollList"></poll-list>
+    <poll-list [pollList]="pollList" [arePollExpired]="arePollExpired"></poll-list>
 
     <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
