new survey page created, bugs removed in new poll page(submit button shud be disable in some cases, this thing was corrected)

--- a/src/pages/management-app/survey/currentSurvey/currentSurvey.html
+++ b/src/pages/management-app/survey/currentSurvey/currentSurvey.html
@@ -5,4 +5,11 @@
 
 <ion-content class="csGrayBackground">
     <p>current surveys///////</p>
+
+    <ion-fab right bottom>
+        <button ion-fab color="danger" (click)="openNewPollModal()">
+            <ion-icon name="add"></ion-icon>
+        </button>
+    </ion-fab>
+    
 </ion-content>
