--- a/src/pages/management-app/survey/currentSurvey/currentSurvey.html
+++ b/src/pages/management-app/survey/currentSurvey/currentSurvey.html
@@ -4,12 +4,19 @@
 </ion-header>
 
 <ion-content class="csGrayBackground">
-    <p>current surveys///////</p>
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
+
+    <survey-list [surveyList]="surveyList" [areSurveysExpired]="areSurveysExpired"></survey-list>
 
     <ion-fab right bottom>
         <button ion-fab color="danger" (click)="openNewPollModal()">
             <ion-icon name="add"></ion-icon>
         </button>
     </ion-fab>
-    
+
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 </ion-content>
