--- a/src/pages/management-app/survey/for-me/for-me.html
+++ b/src/pages/management-app/survey/for-me/for-me.html
@@ -7,8 +7,7 @@
         <ion-refresher-content></ion-refresher-content>
     </ion-refresher>
 
-    <!-- <survey-list [surveyList]="surveyList"></survey-list> -->
-<p>survey for me........</p>
+    <survey-list [surveyList]="surveyList"></survey-list>
     <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
     </ion-infinite-scroll>
