--- a/src/custom-components/survey-vote/survey-vote.html
+++ b/src/custom-components/survey-vote/survey-vote.html
@@ -1,8 +1,43 @@
 <ion-header>
-    <nl-modal-navbar [title]="title" (modalClosed)="dismiss()"></nl-modal-navbar>
+    <nl-modal-navbar [title]="title" (modalClosed)="dismiss()">
+        <button ion-button clear (click)="showInfo=!showInfo">
+            <ion-icon name="information-circle" class="csWhiteText csFont18em"></ion-icon>
+        </button>
+    </nl-modal-navbar>
 </ion-header>
 
 <ion-content class="csGrayBackground">
+
+    <ion-card *ngIf="surveyFromList && showInfo">
+        <ion-card-header>
+            {{surveyFromList.title}}<br>
+            {{surveyFromList.description}}
+        </ion-card-header>
+
+        <ion-card-content>
+
+            <ion-item>
+                <ion-icon name="clock" item-start></ion-icon>
+                <p>
+                    <b>Created : </b>
+                    <span>{{surveyFromList.createdAt | amTimeAgo}}</span>
+                </p>
+            </ion-item>
+
+            <ion-item *ngIf="surveyFromList.expiredAt">
+                <ion-icon name="clock" item-start></ion-icon>
+                <p>
+                    <b>Expires: </b>
+                    <span>{{surveyFromList.expiredAt | amDateFormat: 'LL'}}</span>
+                </p>
+            </ion-item>
+
+          
+        </ion-card-content>
+    </ion-card>
+
+
+
 
     <ion-list *ngIf="survey">
         <form #surveyVoteForm="ngForm" (ngSubmit)="onSubmit()">
@@ -19,7 +54,8 @@
                             <ion-list>
                                 <ion-item *ngFor="let option of q.options, let j=index" class="csPaddingLeft50 csqOptionsBack">
                                     <ion-label>{{option.name}}</ion-label>
-                                    <ion-checkbox checked="false" [(ngModel)]="q.selectedOptions[j]" (ionChange)="checkValidity()" name="checkbox{{j}}" item-end color="primary">
+                                    <ion-checkbox checked="false" [(ngModel)]="q.selectedOptions[j]" (ionChange)="checkValidity()" name="checkbox{{j}}" item-end
+                                        color="primary">
                                     </ion-checkbox>
                                 </ion-item>
                             </ion-list>
