--- a/src/custom-components/survey-vote/survey-vote.html
+++ b/src/custom-components/survey-vote/survey-vote.html
@@ -40,7 +40,6 @@
 
 
     <ion-list *ngIf="survey">
-        <form #surveyVoteForm="ngForm" (ngSubmit)="onSubmit()">
 
             <ion-card *ngFor="let q of survey; let i = index">
                 <ion-card-header>
@@ -54,7 +53,7 @@
                             <ion-list>
                                 <ion-item *ngFor="let option of q.options, let j=index" class="csPaddingLeft50 csqOptionsBack">
                                     <ion-label>{{option.name}}</ion-label>
-                                    <ion-checkbox checked="false" [(ngModel)]="q.selectedOptions[j]" (ionChange)="checkValidity()" name="checkbox{{j}}" item-end
+                                    <ion-checkbox checked="false" [(ngModel)]="q.selectedOptions[j]" (click)="changeVoteBtnStatus()"  item-end
                                         color="primary">
                                     </ion-checkbox>
                                 </ion-item>
@@ -62,10 +61,10 @@
                         </div>
 
                         <div *ngIf="q.optionTypeId == 1">
-                            <ion-list radio-group [(ngModel)]="q.selectedOptions" required name="radio">
+                            <ion-list radio-group [(ngModel)]="q.selectedOptions"  >
                                 <ion-item *ngFor="let option of q.options" class="csPaddingLeft50 csPollOptionsBack">
                                     <ion-label>{{option.name}}</ion-label>
-                                    <ion-radio checked="false" [value]="[option.id]">
+                                    <ion-radio checked="false" [value]="[option.id]" (click)="changeVoteBtnStatus()">
                                     </ion-radio>
                                 </ion-item>
                             </ion-list>
@@ -76,8 +75,8 @@
             </ion-card>
 
             <div padding>
-                <button [disabled]="!surveyVoteForm.valid" ion-button full type="submit">Vote</button>
+                <button [disabled]="isSubmitBtnDisabled" ion-button full type="button" (click)="onSubmit()">Vote</button>
             </div>
-        </form>
+      
     </ion-list>
 </ion-content>
