--- a/src/pages/management-app/evaluation/module/module.html
+++ b/src/pages/management-app/evaluation/module/module.html
@@ -1,13 +1,61 @@
 <ion-header>
-    <nl-navbar [title]="title"></nl-navbar>
+    <ion-navbar color="secondary">
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            <span>{{title | uppercase}}</span>
+        </ion-title>
+    </ion-navbar>
+
+    <ion-toolbar>
+        <ion-segment [(ngModel)]="currentOrClosed" (ionChange)="oncurrentOrClosedChange()" color="secondary">
+            <ion-segment-button value="false" >
+                Current
+            </ion-segment-button>
+            <ion-segment-button value="true">
+                Closed
+            </ion-segment-button>
+        </ion-segment>
+    </ion-toolbar>
+
 </ion-header>
 
 <ion-content class="csGrayBackground">
-    <p>module evaluation></p>
+
+    <ion-refresher (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
+
 
     <ion-fab right bottom>
-            <button ion-fab color="danger" (click)="openNewEvaluationModal()">
-                <ion-icon name="add"></ion-icon>
-            </button>
-        </ion-fab>
+        <button ion-fab color="danger" (click)="openNewEvaluationModal()">
+            <ion-icon name="add"></ion-icon>
+        </button>
+    </ion-fab>
+
+    <ion-list>
+        <a *ngFor="let evaluation of evaluationList" ion-item (click)="openViewEvaluation(evaluation.id)" [style.border-left-color]="evaluation.mainAudienceColor">
+            <h2>
+                <b>{{evaluation.title}}</b>
+            </h2>
+            <p>{{evaluation.description}}</p>
+            <ion-row>
+                <ion-col col-6 class="no-padding-l csGray5353">
+                    Expires: {{evaluation.expiredAt | amTimeAgo}}
+                </ion-col>
+                <ion-col col-6 class="no-padding-l">
+                    {{evaluation.studentVoteCount || evaluation.totalVote || 0}} Votes
+                </ion-col>
+            </ion-row>
+        </a>
+    </ion-list>
+    <ion-list class="no-comment" *ngIf="evaluationList?.length==0">
+        <ion-icon name="list-box"></ion-icon>
+        <br>NO RECORD FOUND
+    </ion-list>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+        <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+
 </ion-content>
