--- a/src/custom-components/survey-vote/survey-vote.html
+++ b/src/custom-components/survey-vote/survey-vote.html
@@ -10,8 +10,8 @@
 
     <ion-card *ngIf="surveyFromList && showInfo">
         <ion-card-header>
-            {{surveyFromList.title}}<br>
-            {{surveyFromList.description}}
+            {{surveyFromList.title}}
+            <br> {{surveyFromList.description}}
         </ion-card-header>
 
         <ion-card-content>
@@ -32,7 +32,22 @@
                 </p>
             </ion-item>
 
-          
+            <ion-item *ngIf="surveyFromList.lecturer">
+                <ion-icon name="person" item-start></ion-icon>
+                <p>
+                    <b>Lecturer: </b>
+                </p>
+                <span >{{surveyFromList.lecturer}}</span>
+            </ion-item>
+
+            <ion-item *ngIf="surveyFromList.module">
+                <ion-icon name="folder" item-start></ion-icon>
+                <p>
+                    <b>Module: </b>
+                </p>
+                <span *ngFor="let md of surveyFromList.module">{{md}}</span>
+            </ion-item>
+
         </ion-card-content>
     </ion-card>
 
@@ -41,42 +56,41 @@
 
     <ion-list *ngIf="survey">
 
-            <ion-card *ngFor="let q of survey; let i = index">
-                <ion-card-header>
-                    {{q.question}}
-                    <p class="csParagraph smallGrayText">{{q.optionTypeName}}</p>
-                </ion-card-header>
-                <ion-card-content>
+        <ion-card *ngFor="let q of survey; let i = index">
+            <ion-card-header>
+                {{q.question}}
+                <p class="csParagraph smallGrayText">{{q.optionTypeName}}</p>
+            </ion-card-header>
+            <ion-card-content>
 
-                    <div class="csPollOptionsBack">
-                        <div *ngIf="q.optionTypeId== 2">
-                            <ion-list>
-                                <ion-item *ngFor="let option of q.options, let j=index" class="csPaddingLeft50 csqOptionsBack">
-                                    <ion-label>{{option.name}}</ion-label>
-                                    <ion-checkbox checked="false" [(ngModel)]="q.selectedOptions[j]" (click)="changeVoteBtnStatus()"  item-end
-                                        color="primary">
-                                    </ion-checkbox>
-                                </ion-item>
-                            </ion-list>
-                        </div>
-
-                        <div *ngIf="q.optionTypeId == 1">
-                            <ion-list radio-group [(ngModel)]="q.selectedOptions"  >
-                                <ion-item *ngFor="let option of q.options" class="csPaddingLeft50 csPollOptionsBack">
-                                    <ion-label>{{option.name}}</ion-label>
-                                    <ion-radio checked="false" [value]="[option.id]" (click)="changeVoteBtnStatus()">
-                                    </ion-radio>
-                                </ion-item>
-                            </ion-list>
-                        </div>
+                <div class="csPollOptionsBack">
+                    <div *ngIf="q.optionTypeId== 2">
+                        <ion-list>
+                            <ion-item *ngFor="let option of q.options, let j=index" class="csPaddingLeft50 csqOptionsBack">
+                                <ion-label>{{option.name}}</ion-label>
+                                <ion-checkbox checked="false" [(ngModel)]="q.selectedOptions[j]" (click)="changeVoteBtnStatus()" item-end color="primary">
+                                </ion-checkbox>
+                            </ion-item>
+                        </ion-list>
                     </div>
 
-                </ion-card-content>
-            </ion-card>
+                    <div *ngIf="q.optionTypeId == 1">
+                        <ion-list radio-group [(ngModel)]="q.selectedOptions">
+                            <ion-item *ngFor="let option of q.options" class="csPaddingLeft50 csPollOptionsBack">
+                                <ion-label>{{option.name}}</ion-label>
+                                <ion-radio checked="false" [value]="[option.id]" (click)="changeVoteBtnStatus()">
+                                </ion-radio>
+                            </ion-item>
+                        </ion-list>
+                    </div>
+                </div>
 
-            <div padding>
-                <button [disabled]="isSubmitBtnDisabled" ion-button full type="button" (click)="onSubmit()">Vote</button>
-            </div>
-      
+            </ion-card-content>
+        </ion-card>
+
+        <div padding>
+            <button [disabled]="isSubmitBtnDisabled" ion-button full type="button" (click)="onSubmit()">Vote</button>
+        </div>
+
     </ion-list>
 </ion-content>
