--- a/src/pages/management-app/complaint/edit-complaint/search/search.html
+++ b/src/pages/management-app/complaint/edit-complaint/search/search.html
@@ -12,5 +12,9 @@
             </button>
         </ion-list>
     </ion-card>
+
+    <p *ngIf="noMatch">No Match Found</p>
+    <p *ngIf="searchList.length == 0">No Data Available</p>
+    
 </ion-content>        
     
