--- a/src/pages/management-app/evaluation/module/module.html
+++ b/src/pages/management-app/evaluation/module/module.html
@@ -10,7 +10,7 @@
 
     <ion-toolbar>
         <ion-segment [(ngModel)]="currentOrClosed" (ionChange)="oncurrentOrClosedChange()" color="secondary">
-            <ion-segment-button value="false" >
+            <ion-segment-button value="false" selected>
                 Current
             </ion-segment-button>
             <ion-segment-button value="true">
