all unused impoerts removed, no data found icon placed in survey list

--- a/src/custom-components/survey-list/survey-list.html
+++ b/src/custom-components/survey-list/survey-list.html
@@ -21,3 +21,8 @@
     </a>
 
 </ion-list>
+
+<div class="no-comment" *ngIf="surveyList?.length==0">
+    <ion-icon name="list-box"></ion-icon>
+    <br>NO RECORD FOUND
+</div>
