--- a/src/pages/management-app/complaint/edit-complaint/search/search.html
+++ b/src/pages/management-app/complaint/edit-complaint/search/search.html
@@ -3,7 +3,7 @@
 </ion-header>
 
 <ion-content class="csGrayBackground">
-    <ion-searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" (ionClear)="onSearchClear($event)"></ion-searchbar>
+    <ion-searchbar #searchbar [(ngModel)]="searchInput" (ionInput)="onSearchInput($event)" (ionClear)="onSearchClear($event)"></ion-searchbar>
 
     <ion-card>
         <ion-list>
