--- a/src/pages/management-app/evaluation/lecturer/lecturer.html
+++ b/src/pages/management-app/evaluation/lecturer/lecturer.html
@@ -39,7 +39,7 @@
                     Expired: {{evaluation.expiredAt | amTimeAgo}}
                 </ion-col>
                 <ion-col col-6 class="no-padding-l">
-                    {{evaluation.studentVoteCount || evaluation.totalVote || 0}} Votes
+                    {{evaluation.studentVoteCount + evaluation.employeeVoteCount}} Votes
                 </ion-col>
             </ion-row>
         </a>
