--- a/src/pages/management-app/assignment/current/current.html
+++ b/src/pages/management-app/assignment/current/current.html
@@ -16,21 +16,21 @@
 
     <ion-list>
         <ion-card *ngFor="let assign  of assignmentList">
-        <ion-item text-wrap >
-            <h2>{{assign.moduleName}}</h2>
-            <p>{{assign.description}}</p>
-            <p>
-                <b>Year:</b> {{assign.yearName}}</p>
-            <p>
-                <b>Created Date: </b> {{assign.createdAt | amDateFormat: 'LL'}}</p>
-            <p>
-                <b>Due Date: </b> {{assign.dueDate | amDateFormat: 'LL'}}</p>
+            <ion-item text-wrap>
+                <h2>{{assign.moduleName}}</h2>
+                <p>{{assign.description}}</p>
+                <p>
+                    <b>Year:</b> {{assign.yearName}}</p>
+                <p>
+                    <b>Created Date: </b> {{assign.createdAt | amDateFormat: 'LL'}}</p>
+                <p>
+                    <b>Due Date: </b> {{assign.dueDate | amDateFormat: 'LL'}}</p>
+                <button *ngIf="assign.fileCount>0" ion-button clear (click)="openDocuments(assign)" >View Attached Documents</button>
 
-
-        </ion-item>
-    </ion-card>
+            </ion-item>
+        </ion-card>
     </ion-list>
-    
+
     <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
         <ion-infinite-scroll-content></ion-infinite-scroll-content>
     </ion-infinite-scroll>
